[tool.poetry]
name = "livelabeling"
version = "0.1.0"
description = "Live labeling of Youtube Live"
authors = ["Stephane Guren <stephane.guren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.3.50"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
yt-dlp = "^2024.12.13"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
